align issue fixed

--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ h3 {
   font-size: 3rem;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
-  align: center;
 }
 
 .small-rounded-button {
